--- a/src/LanguageTool.Client/LanguageTool.Client.csproj
+++ b/src/LanguageTool.Client/LanguageTool.Client.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="../../README.md" Pack="true" PackagePath="$(PackageReadmeFile)" Visible="False" />
     <None Include="languagetool-swagger.json" />
   </ItemGroup>
 
