--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -28,6 +28,6 @@ jobs:
       dotnet_version: '8.0.403'
       azure_nuget_feed: 'https://pkgs.dev.azure.com/pleonex/Pleosoft/_packaging/Pleosoft-Preview/nuget/v3/index.json'
     secrets:
-      nuget_preview_token: "az" # Dummy values as we use Azure DevOps only - Replace with your token for nuget.org
-      nuget_stable_token: "az" # Dummy values as we use Azure DevOps only - Replace with your token for nuget.org
+      nuget_preview_token: "az" # Dummy values as we use Azure DevOps only
+      nuget_stable_token: ${{ secrets.NUGET_FEED_TOKEN }}
       azure_nuget_token: ${{ secrets.AZURE_NUGET_TOKEN }}
